--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
 		</div>
 		<div id="location"></div>
 		<div class="holder">
-			<div id="info">Explore readings from our LoRaWAN mote.</div>
-			<div id="temperature"></div>
-			<div id="light"></div>
+			<p>Explore readings from our LoRaWAN mote.</p>
+			<figure>
+				<div id="temperature"></div>
+				<figcaption>Temperature readings</figcaption>
+			</figure>
+			<figure>
+				<div id="light"></div>
+				<figcaption>Light readings</figcaption>
+			</figure>
 		</div>
 
 		<div style="clear:both;"></div>
@@ -39,7 +45,7 @@
 
 	<footer class="b1-bg">
 		<div class="holder">
-			<a href="https://odileeds.org/"><img src="/resources/images/odileeds-white.svg" style="width: 200px;margin-left:-40px;margin-top:-10px;" /></a> 
+			<a href="https://odileeds.org/"><img src="../../resources/images/odileeds-white.svg" style="width: 200px;margin-left:-40px;margin-top:-10px;" /></a> 
 			<p>An ODI Leeds project</p>
 		</div>
 	</footer>
