Add auto-update to graphs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<div id="location"></div>
 		<div class="holder">
-			<p>Explore readings from our LoRaWAN mote.</p>
+			<p>Explore readings from our LoRaWAN mote. Get <a href="https://github.com/odileeds/mote/blob/master/data.csv">the raw data as CSV</a>.</p>
 			<figure>
 				<div id="temperature"></div>
 				<figcaption>Temperature readings</figcaption>
