--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="twitter:url" property="og:url" content="https://odileeds.org/projects/mote/">
 	<meta name="twitter:title" property="og:title" content="LoRaWAN Mote at ODI Leeds">
 	<meta name="twitter:description" property="og:description" content="Temperature and light readings from ODI Leeds's LoRaWAN mote">
-	<meta name="twitter:image" property="og:image" content="https://odileeds.org/projects/mote/screenshot.png">
+	<meta name="twitter:image" property="og:image" content="https://odileeds.org/projects/mote/mote.png">
 	<meta name="keywords" content="open,data,Leeds,IoT,mote,LoRaWAN">
 </head>
 <body>
