--- a/index.html
+++ b/index.html
@@ -10,6 +10,58 @@
 	<script type="text/javascript" src="../../resources/stuquery.js"></script>
 	<script type="text/javascript" src="mote.js"></script>
 	<link rel="StyleSheet" href="../../resources/style.css" type="text/css" />
+	<style>
+	.spinner {
+		margin: 150px auto;
+		width: 50px;
+		height: 50px;
+		text-align: center;
+		font-size: 10px;
+	}
+	.spinner > div {
+		background-color: #333;
+		height: 100%;
+		width: 6px;
+		margin-right: 1px;
+		display: inline-block;
+		-webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+		animation: sk-stretchdelay 1.2s infinite ease-in-out;
+	}
+	.spinner .rect2 {
+		-webkit-animation-delay: -1.1s;
+		animation-delay: -1.1s;
+	}
+
+	.spinner .rect3 {
+		-webkit-animation-delay: -1.0s;
+		animation-delay: -1.0s;
+	}
+
+	.spinner .rect4 {
+		-webkit-animation-delay: -0.9s;
+		animation-delay: -0.9s;
+	}
+
+	.spinner .rect5 {
+		-webkit-animation-delay: -0.8s;
+		animation-delay: -0.8s;
+	}
+
+	@-webkit-keyframes sk-stretchdelay {
+		0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+		20% { -webkit-transform: scaleY(1.0) }
+	}
+
+	@keyframes sk-stretchdelay {
+		0%, 40%, 100% { 
+			transform: scaleY(0.4);
+			-webkit-transform: scaleY(0.4);
+		}  20% { 
+			transform: scaleY(1.0);
+			-webkit-transform: scaleY(1.0);
+		}
+	}
+	</style>
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@ODILeeds">
 	<meta name="twitter:url" property="og:url" content="https://odileeds.org/projects/mote/">
